--- a/src/components/VisualizationArea/VisualizationArea.css
+++ b/src/components/VisualizationArea/VisualizationArea.css
@@ -1,8 +1,34 @@
 .visualization-area {
     display: flex;
-    width: 100%;
+    width: 90%;
     max-width: 900px;
     margin: 4rem auto;
     justify-content: center;
     gap: 1rem;
+}
+
+.navbar {
+    padding: 2rem;
+    background-color: rgb(242, 242, 242);
+    border-bottom: 1px solid rgb(220, 220, 220);
+}
+
+.navbar-container {
+    display: flex;
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    /* justify-content: center; */
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flex {
+    display: flex;
+}
+
+.nav-button {
+    padding: 0.3rem 1rem;
+    border-radius: 5px;
+    border: 1px solid; 
 }
